--- a/src/App.css
+++ b/src/App.css
@@ -5,33 +5,23 @@
   font-family: "Nunito", sans-serif !important;
 }
 
-/* Shared */
-
 .title {
   text-align: center;
 }
-
-
-/* NavBar  */
 
 .nav-bar-text a, .nav-bar-btn a{
   text-decoration: none;
   color: white;
 }
 
-/* Loading */
 .loading-wrapper {
   margin: 30px auto;
 }
-
-/* Search */
 
 .search-wraper {
   margin-top: 20px;
   margin: 20px auto;
 }
-
-/* Main */
 
 .main-wrapper {
   text-align: center;
@@ -45,31 +35,28 @@
 
 .oneUser {
   margin: 40px;
-  width: 20%;
+  width: 28%;
   display: inline-block;
-  height: 400px;
+  height: 20rem;
   vertical-align: top;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-/* Users */
-
 .btns-wrapper {
-  margin: 10px auto;
+  margin:auto;
   width: 50%;
+  padding-top: 2rem;
+}
+.delBtn {
+  margin-left: 10px !important;
 }
 
-/* Modal */
 .modal-wrapper {
   text-align: center;
 }
 .title-modal-wrapper, .modal-title{
   margin: 12px !important;
 }
-
-
-
-/* Add User */
 
 .add-user-wrapper {
   margin-top: 20px;
@@ -82,7 +69,6 @@
 
 .name-conteiner, .image-conteiner, .email-conteiner, .location-conteiner, .btn {
   width: 60%;
-  /* border: 1px solid black; */
   margin: 20px auto;
   text-align: center;
 }
@@ -91,10 +77,34 @@
   margin-top: 20px !important;
 }
 
-/* Form */
-
 .add-form {
   margin: auto;
   width: 30%;
 }
 
+@media only screen and (max-width: 1330px) {
+  .oneUser {
+    margin: 40px;
+    width: 30%;
+    height: 21rem;
+
+  }
+}
+
+@media only screen and (max-width: 1220px) {
+  .oneUser {
+    margin: 40px;
+    width: 35%;
+    height: 21rem;
+
+  }
+}
+
+@media only screen and (max-width: 1055px) {
+  .oneUser {
+    margin: 40px;
+    width: 50%;
+    height: 21rem;
+
+  }
+}
